[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/UI/healthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shader.tres" type="Shader" id=2]
[ext_resource path="res://src/entities/objects/weapons/Axe.gd" type="Script" id=3]
[ext_resource path="res://assets/entities/players/sooltan/axe.png" type="Texture" id=4]
[ext_resource path="res://assets/entities/players/slash_effect_anim_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/entities/players/Sprite-0001-Sheet.png" type="Texture" id=6]
[ext_resource path="res://src/scripts/StatesMachine.gd" type="Script" id=7]
[ext_resource path="res://src/entities/players/sooltan/states/Idle.gd" type="Script" id=8]
[ext_resource path="res://src/entities/players/sooltan/states/Move.gd" type="Script" id=9]
[ext_resource path="res://src/entities/players/WeaponManager.gd" type="Script" id=10]
[ext_resource path="res://src/entities/players/sooltan/sooltan.gd" type="Script" id=11]

[sub_resource type="CapsuleShape2D" id=52]
radius = 4.0
height = 3.0

[sub_resource type="ShaderMaterial" id=53]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.6757
height = 40.3915

[sub_resource type="Animation" id=58]
resource_name = "Attack"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponManager/HandPosition2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.23, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, -120.0, 90.0, 90.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponManager/HandPosition2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.23, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, -3 ), Vector2( -8, -35 ), Vector2( 27, 0 ), Vector2( 27, 0 ), Vector2( 11, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponManager/SlashSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponManager/SlashSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.13, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=59]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponManager/HandPosition2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponManager/HandPosition2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponManager/SlashSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponManager/SlashSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=60]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=56]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=55]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=57]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Sooltan" type="KinematicBody2D" groups=["player"]]
collision_layer = 11
collision_mask = 11
script = ExtResource( 11 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 52 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 53 )
position = Vector2( 0, -24 )
texture = ExtResource( 6 )
hframes = 4
vframes = 2

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( 0, -16 )
script = ExtResource( 10 )

[node name="HandPosition2D" type="Position2D" parent="WeaponManager"]
position = Vector2( 11, -3 )
rotation = 0.523599

[node name="Axe" type="Sprite" parent="WeaponManager/HandPosition2D"]
position = Vector2( -0.707107, 0.707107 )
texture = ExtResource( 4 )
offset = Vector2( 0, -15 )
script = ExtResource( 3 )

[node name="HitRange" type="Area2D" parent="WeaponManager/HandPosition2D/Axe"]
position = Vector2( 13.435, 9.19239 )
rotation = -0.785402
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponManager/HandPosition2D/Axe/HitRange"]
position = Vector2( 9.0001, -28 )
rotation = -0.785398
shape = SubResource( 1 )

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="WeaponManager/HandPosition2D/Axe"]
root_node = NodePath("../../../..")
anims/Attack = SubResource( 58 )
anims/RESET = SubResource( 59 )

[node name="SlashSprite" type="Sprite" parent="WeaponManager"]
position = Vector2( 23.8869, -46.9853 )
rotation = -1.13446
scale = Vector2( 1, 1.4588 )
texture = ExtResource( 5 )
hframes = 3

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_top = -65.0
margin_bottom = -33.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 60 )
anims/Idle = SubResource( 56 )
anims/RESET = SubResource( 55 )
anims/Run = SubResource( 57 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -24 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -25 )
